# rules_vite

./: .bazelignore  .bazelrc  .bazelversion  BUILD.bazel  README.md  WORKSPACE  index.bzl  internal_deps.bzl  package.json  version.bzl
examples/react-full/: .gitignore  BUILD.bazel  WORKSPACE  package-lock.json  package.json  readme.md  vite.config.ts
examples/react-full/pages/: markdown.page.md
examples/react-full/server/: index.ts
examples/vite-project/: .bazelignore  .bazelversion  .gitignore  BUILD.bazel  WORKSPACE  package-lock.json  package.json  vite.config.mjs
examples/vite-project/src/: App.tsx
vite/: BUILD.bazel  defs.bzl  repositories.bzl
vite/private/: BUILD.bazel  README.md  actions.bzl  copy-actions.bzl  copy-rules.bzl  launcher_template.sh  providers.bzl  rules.bzl  versions.bzl  vite-plugin-ssr-actions.bzl  vite-plugin-ssr-rules.bzl  vite_plugin_ssr_launcher_template.sh
